--- a/dc/package.json
+++ b/dc/package.json
@@ -20,7 +20,9 @@
     "yarn-run-all": "^3.1.1"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "http-errors": "^2.0.0"
+    "http-errors": "^2.0.0",
+    "mongoose": "^7.1.1"
   }
 }
